--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
 
 <footer class="footer">
     <p class="copyright"> Copyright 2018. All right reserved.</p>
-    <ul class="icons">
-    <li><ion-icon name="logo-facebook"></ion-icon></li>
-    <li><ion-icon name="logo-twitter"></ion-icon></li>
-    <li><ion-icon name="logo-linkedin"></ion-icon></li>
-    <li><ion-icon name="logo-github"></ion-icon></li>
-    </ul>
+    <article class="icons">
+    <i><ion-icon name="logo-facebook"></ion-icon></i>
+    <i><ion-icon name="logo-twitter"></ion-icon></i>
+    <i><ion-icon name="logo-linkedin"></ion-icon></i>
+    <i><ion-icon name="logo-github"></ion-icon></i>
+    </article>
    
 </footer>
 </body>
